# mtcli-trade

./: .gitignore  .readthedocs.yaml  404.html  README.md  index.html  make.bat  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.bat  search.html  setup.py  sitemap.xml  tox.ini
.github/workflows/: tests.yml
configuracao/: index.html
docs/: README.md  index.md
mtcli_trade/: __init__.py  buy.py  cancel.py  cancela.py  cli.py  compra.py  conecta.py  conf.py  logger.py  mt5_context.py  ordem.py  ordens.py  orders.py  plugin.py  pos.py  posicoes.py  risco.py  sell.py  trade.py  venda.py  zera.py
mtcli_trade/clis/: buy.py  cancel.py  orders.py  positions.py  sell.py  zera.py
mtcli_trade/commands/: buy.py  cancel.py  close.py  compra.py  compra_cli.py  monitor.py  ordens.py  ordens_cli.py  orders.py  posicao.py  posicoes.py  posicoes_cli.py  positions.py  sell.py  trade.py  venda.py  venda_cli.py  zera.py
mtcli_trade/controllers/: base_order_controller.py  bloqueio.json  buy_controller.py  cancel_controller.py  close_controller.py  compra_controller.py  err  ordens_controller.py  order_controller.py  order_factory.py  orders_controller.py  posicao_controller.py  posicoes_controller.py  positions_controller.py  sell_controller.py  venda_controller.py  zera_controller.py
mtcli_trade/decorators/: mt5_connection.py
mtcli_trade/events/: event_bus.py  events.py
mtcli_trade/listeners/: sound_listener.py
mtcli_trade/models/: compra_model.py  gerencia.py  ordem_model.py  ordens_model.py  order_model.py  orders_model.py  posicao_model.py  posicoes_model.py  positions_model.py  risco_model.py  risk_engine.py  venda_model.py
mtcli_trade/monitor/: positions_monitor.py
mtcli_trade/services/: cancel_service.py  close_service.py  daemon_service.py  mt5_service.py  orders_service.py  positions_service.py  sound_service.py
mtcli_trade/strategies/: base_strategy.py  limit_strategy.py  market_strategy.py  stop_strategy.py  strategy_factory.py
mtcli_trade/utils/: mt5_retcode.py
mtcli_trade/views/: buy_view.py  cancel_view.py  close_view.py  compra_view.py  ordem_view.py  ordens_view.py  order_view.py  orders_view.py  posicao_view.py  posicoes_view.py  positions_view.py  venda_view.py
search/: search_index.json
tests/: conftest.py  test_buy.py  test_buy_cli.py  test_compra.py  test_compra_cli.py  test_compra_controller.py  test_compra_integracao.py  test_compra_model.py  test_enviar_ordem.py  test_ordem.py  test_ordem_model.py  test_ordens.py  test_ordens_controller.py  test_ordens_model.py  test_ordens_view.py  test_orders_controller.py  test_orders_model.py  test_orders_view.py  test_posicoes.py  test_posicoes_model.py  test_risco.py  test_risco_model.py  test_trade.py  test_venda.py  test_venda_cli.py
uso/: index.html
