[project]
name = "mtcli-trade"
version = "1.1.0"
description = "Plugin mtcli para gerenciamento de órdens"
readme = "docs/README.md"
authors = [
    { name = "Valmir França da Silva", email = "vfranca3@gmail.com" }
]
license = "GPL-3.0"
requires-python = ">=3.10,<3.14.0"
packages = [{ include = "mtcli_trade" }]
dependencies = [
    "mtcli (>=1.18.1,<2.0.0)"
]

[project.urls]
repository = "https://github.com/vfranca/mtcli-trade"
homepage = "https://github.com/vfranca/mtcli-trade"
documentation = "https://vfranca.github.io/mtcli-trade"
issues = "https://github.com/vfranca/mtcli-trade/issues"

[project.entry-points."mtcli.plugins"]
trade = "mtcli_trade.trade:trade"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
isort = "^6.0.1"
pytest-coverage = "^0.0"
ruff = "^0.12.11"
mypy = "^1.17.1"
tox = "^4.29.0"
black = "^25.1.0"
pytest-cov = "^6.2.1"

[tool.pytest.ini_options]
addopts = "--cov=mtcli_trade --cov-report=html -ra -q"
