[project]
name = "mtcli-trade"
version = "2.0.0.dev2"
description = "Plugin mtcli para gerenciamento de órdens"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Valmir França", email = "vfranca3@gmail.com" }
]
requires-python = ">=3.10,<3.14.0"

keywords = [
    "trading",
    "orders",
    "risk manager",
    "risk",
    "metatrader5",
    "mt5",
    "cli",
    "acessibilidade",
    "screen reader friendly"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "mtcli>=3.7.0",
    "mtcli-risco>=2.2.0,<3.0.0",
]

[project.urls]
homepage = "https://github.com/vfranca/mtcli-trade"
documentation = "https://mtcli-trade.readthedocs.io"
repository = "https://github.com/vfranca/mtcli-trade"
issues = "https://github.com/vfranca/mtcli-trade/issues"

[project.entry-points."mtcli.plugins"]
mtcli-trade = "mtcli_trade.plugin:register"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
tox = "^4.29.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
pymdown-extensions = "^10.16.1"
